<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_query_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/medium_spacing"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_input_hint"
                    android:singleLine="true"
                    android:textColor="@color/onPrimaryColor"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/clear_text_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/medium_spacing"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_clear"
                    app:tint="@color/onPrimaryColor"
                    tools:visibility="visible" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/empty_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        tools:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/indicator_image_size"
            android:layout_height="@dimen/indicator_image_size"
            app:srcCompat="@drawable/ic_clear"
            app:tint="@color/secondaryColor" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            android:gravity="center"
            android:text="@string/no_results_description"
            android:textColor="@color/onBackgroundColor"
            android:textSize="@dimen/indicator_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hint_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/indicator_image_size"
            android:layout_height="@dimen/indicator_image_size"
            app:srcCompat="@drawable/ic_search"
            app:tint="@color/secondaryColor" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            android:gravity="center"
            android:text="@string/find_music_description"
            android:textColor="@color/onBackgroundColor"
            android:textSize="@dimen/indicator_text_size" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        tools:itemCount="5"
        tools:listitem="@layout/track_item" />

</androidx.constraintlayout.widget.ConstraintLayout>