<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppToolbar"
            app:title="Details" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/track_art"
                android:layout_width="@dimen/large_art_size"
                android:layout_height="@dimen/large_art_size"
                android:layout_marginTop="@dimen/medium_spacing"
                android:background="@color/on_primary_art_background"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toTopOf="@id/top"
                app:layout_constraintVertical_chainStyle="packed"
                app:shapeAppearanceOverlay="@style/ImageShapeOverlay"
                app:srcCompat="@drawable/ic_track" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/title_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_spacing"
                app:contentPadding="@dimen/small_spacing"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/track_art">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_details_label" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/track_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/onBackgroundColor"
                        android:textSize="@dimen/details_text_size"
                        tools:text="Hero" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/artist_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                app:contentPadding="@dimen/small_spacing"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/title_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/artist_details_label" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/track_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/onBackgroundColor"
                        android:textSize="@dimen/details_text_size"
                        tools:text="Monsta X" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/album_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                app:contentPadding="@dimen/small_spacing"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/artist_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/album_details_label" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/track_album"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/onBackgroundColor"
                        android:textSize="@dimen/details_text_size"
                        tools:text="Connected" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/duration_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                app:contentPadding="@dimen/small_spacing"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/album_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_details_label" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/track_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/onBackgroundColor"
                        android:textSize="@dimen/details_text_size"
                        tools:text="03:00" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/size_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                app:contentPadding="@dimen/small_spacing"
                app:layout_constraintEnd_toEndOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintBottom_toBottomOf="@id/bottom"
                app:layout_constraintTop_toBottomOf="@id/duration_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size_details_label" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/track_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/onBackgroundColor"
                        android:textSize="@dimen/details_text_size"
                        tools:text="2.3 MB" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <include layout="@layout/screen_edges" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>